       remaining drums in the list can be optionally selected to replace on of the 16
       drum instruments.

     - TRKLABEL and TRKCATS are also used when a pattern is saved

   o New option 9/33 allows to unmute tracks on pattern changes

   o New option 14/33 allows to change the steps of the current selected view only


MIDIboxSEQ V4.095
~~~~~~~~~~~~~~~~~

   o support for midiphy Frontpanel.
     The appr. HW configuration file can be found under
     hwcfg/midiphy_lh/MBSEQ_HW.V4 and hwcfg/midiphy_rh/MBSEQ_HW.V4

   o introduced first "MBSEQV4+" function.
     MIDIbox SEQ V4+ is a special firmware variant for the STM32F4 core.
     It offers additional memory and/or CPU hungry functions which can't be implemented
     for STM32F1 or LPC17 due to resource limitations.
     These special functions are marked with "V4+" in future.

   o V4+: implemented CC layers for drum tracks.
     The CC numbers are statically assigned for all tracks of the session.
     They can be changed in the Options page (item 20/26)

   o trigger/layer edit views now also supported for drum tracks

   o reference step for pattern changes now works indpendent from reference step used for sync-to-measure

   o PATTERN page: pattern is switched immediately if SELECT button is pressed, regardless of
     the pattern change synchronisation option.

   o OPTIONS page: new option "Print and Modify Steps w/o changing Gate".
     If enabled: note values will always be print regardless if they are played or not.
     Changing a note value won't automatically enable the gate

   o OPTIONS page: new option "Print Notes with transposed value".
     Enabled by default (due to change in V4.093), can be optionally disabled now.

   o OPTIONS page: new option "Swap LED colours" (relevant for Wilba and midiphy Frontpanels)

   o OPTIONS page: new option "Invert Mute LEDs"

   o OPTIONS page: new TPD option "BPM" and "BPM with Beat": prints tempo value and optionally flashes to measure/beat
